fix(global.scss): blurry text

--- a/src/global.scss
+++ b/src/global.scss
@@ -33,3 +33,9 @@
   font-family: BonvenoCF;
   src: url("assets/fonts/BonvenoCF-Light.otf");
 }
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -font-smoothing: antialiased;
+  -webkit-transform: initial !important;
+}
